<resources>
    <string name="app_name">Extra Volume Booster</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-3630887845927758~5252247942</string>
    <string name="facebook_app_id" translatable="false">229119041454488</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="volume_booster">Volume Booster</string>
    <string name="menu_title">Music Player &amp; Volume Booster</string>
    <string name="title_2">Equalizer</string>

    <string name="extra_boost">Extra Boost</string>

    <string name="music_player" translatable="false">Music Player</string>

    <string name="tutorial">Tutorial</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_with">Share Extra Volume Booster:</string>
    <string name="loading_splash">Loading &#8230;</string>

    <string name="todo" translatable="false">TODO</string>

    <string name="notification_text">You can customize the sound easily!</string>

    <string name="tutorial_1_text_1">%200\nExtra Volume</string>
    <string name="tutorial_1_text_2">Get maximum volume\nwhile listening to music</string>

    <string name="tutorial_2_text_1">Equalizer</string>
    <string name="tutorial_2_text_2">Customize the sound of\nyour tracks on the equalizer</string>

    <string name="next">Next</string>
    <string name="got_it">Got it!</string>

    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="mute" translatable="false">Mute</string>
    <string name="_20_percent" translatable="false">20%</string>
    <string name="_40_percent" translatable="false">40%</string>
    <string name="_60_percent" translatable="false">60%</string>
    <string name="_80_percent" translatable="false">80%</string>
    <string name="_100_percent" translatable="false">100%</string>
    <string name="_120_percent" translatable="false">120%</string>
    <string name="_140_percent" translatable="false">140%</string>
    <string name="_160_percent" translatable="false">160%</string>
    <string name="_180_percent" translatable="false">180%</string>
    <string name="max" translatable="false">Max</string>

    <string name="bass">Bass</string>
    <string name="visual">Visualize</string>

    <string name="open_music_player">Tap to open your music player.</string>

    <string name="not_valid_link">This is not a valid link!</string>
    <string name="no_browser">You don\'t have any browser to open web page!</string>
    <string name="share_app">Hey! Share best extra volume booster!</string>
    <string name="not_started_music_yet">Not started music yet!</string>
    <string name="playing">(Playing&#8230;)</string>
    <string name="paused">(Paused)</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="enjoy">Enjoy</string>
    <string name="permission_not_granted">Necessary permission is not granted! Visualizer is not run!</string>

    <string name="admost_gdpr_text" translatable="false">We personalize your advertising experience using this Application and its partners. By giving your consent to this improved ad experience, you\'ll see more relevant ads for you. this Application and its partners may collect and process device identifiers, location data, and other demographic and interest data about you to provide advertising experience tailored to you. Learn more by visiting policy webpage: http://resources.admost.com/privacy-policy \n\nBy agreeing, you are confirming that you are over age 16 and would like a personalized ad experience.</string>
    <string name="admost_gdpr_yes" translatable="false">YES, I AGREE</string>
    <string name="admost_gdpr_no" translatable="false">NO, THANK YOU</string>
    <string name="admost_gdpr_title" translatable="false">Personalize your ad experience</string>

    <string name="ad_settings">Ad Settings</string>

    <string name="voice_recorder">Voice Recorder</string>

    <string name="speedtest">Speed Test</string>

</resources>
