<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/maBoostText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:text="@string/extra_boost"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/maVolumeSeekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:progressDrawable="@drawable/volume_seekbar"
        android:splitTrack="false"
        android:thumb="@drawable/volume_indicator_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="10"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/maVolumeMuteButtonLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/maVolume20ButtonLayout"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/maVolumeMuteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_passive"
                android:gravity="center"
                android:text="@string/mute"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/maVolume20ButtonLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/maVolume40ButtonLayout"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/maVolumeMuteButtonLayout">

            <TextView
                android:id="@+id/maVolume20Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_passive"
                android:gravity="center"
                android:text="@string/_20_percent"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/maVolume40ButtonLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/maVolume60ButtonLayout"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/maVolume20ButtonLayout">

            <TextView
                android:id="@+id/maVolume40Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_passive"
                android:gravity="center"
                android:text="@string/_40_percent"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/maVolume60ButtonLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/maVolume80ButtonLayout"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/maVolume40ButtonLayout">

            <TextView
                android:id="@+id/maVolume60Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_passive"
                android:gravity="center"
                android:text="@string/_60_percent"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/maVolume80ButtonLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/maVolume100ButtonLayout"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/maVolume60ButtonLayout">

            <TextView
                android:id="@+id/maVolume80Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_passive"
                android:gravity="center"
                android:text="@string/_80_percent"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/maVolume100ButtonLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/maVolume80ButtonLayout">

            <TextView
                android:id="@+id/maVolume100Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_passive"
                android:gravity="center"
                android:text="@string/_100_percent"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="10"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/maVolume120ButtonLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/maVolume140ButtonLayout"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/maVolume120Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_passive"
                android:gravity="center"
                android:text="@string/_120_percent"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/maVolume140ButtonLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/maVolume160ButtonLayout"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/maVolume120ButtonLayout">

            <TextView
                android:id="@+id/maVolume140Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_passive"
                android:gravity="center"
                android:text="@string/_140_percent"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/maVolume160ButtonLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/maVolume180ButtonLayout"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/maVolume140ButtonLayout">

            <TextView
                android:id="@+id/maVolume160Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_passive"
                android:gravity="center"
                android:text="@string/_160_percent"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/maVolume180ButtonLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/maVolume200ButtonLayout"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/maVolume160ButtonLayout">

            <TextView
                android:id="@+id/maVolume180Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_passive"
                android:gravity="center"
                android:text="@string/_180_percent"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/maVolume200ButtonLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/maVolume180ButtonLayout">

            <TextView
                android:id="@+id/maVolumeMaxButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_passive"
                android:gravity="center"
                android:text="@string/max"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>